# payslipwexplainer

./: .dockerignore  .env.template  .gitignore  .replit  Dockerfile  README.md  app.py  backend.py  db.py  frontend.html  payslip_data.db  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--DOCTYPE-html-html-lang-he-dir-rtl-head-meta-charset-UTF-8-meta-name-viewpor-1752983379267_1752983379269.txt  knowledge_base_payslip_1752983749640.txt
src/: __init__.py  gemini_ocr.py  ocr.py  tesseract_ocr.py
src/api/: __init__.py  main.py  server.py
src/ingest/: __init__.py  extractor.py
src/kb/: __init__.py  store.py
src/llm/: __init__.py  client.py
src/parser/: __init__.py  basic.py
tests/: test_api.py  test_backend_pdf.py  test_compare_payslips.py  test_gemini_ocr_retry.py  test_ocr_budget_retry.py  test_ocr_rotation.py  test_parser.py  test_pdf_limits.py  test_tesseract_fallback.py
tests/data/: sample_payslip.txt
